--- a/data/NER/generate/make_dataset.ipynb
+++ b/data/NER/generate/make_dataset.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,13 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../01_fewshot.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"01_fewshot.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    few_entities = json.load(f)"
    ]
   },
@@ -156,9 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:51<00:00, 12.96s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -182,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../02_expended_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"02_expended_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(expended_entities, f, ensure_ascii=False, indent=4)"
    ]
   },
@@ -203,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def sample_entities(all_entities, min_k=1, max_k=2):\n",
+    "def sample_entities(all_entities, min_k=1, max_k=4):\n",
     "    k = np.random.randint(min_k, max_k+1)\n",
     "    idxs = np.random.choice(range(len(all_entities)), size=k, replace=False)\n",
     "    entities = []\n",
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../02_expended_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"02_expended_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    expended_entities = json.load(f)"
    ]
   },
@@ -308,9 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [09:59<00:00,  6.00s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -339,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../03_generated_sentences.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"03_generated_sentences.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(generated_sentences, f, ensure_ascii=False, indent=4)\n",
     "#print(json.dumps(data, indent=4, ensure_ascii=False))"
    ]
@@ -359,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,6 +408,10 @@
     "    prompt += \"- I-ASP: Inside of an Aspect term\\n\"\n",
     "    prompt += \"- B-OPI: Beginning of an Opinion term\\n\"\n",
     "    prompt += \"- I-OPI: Inside of an Opinion term\\n\"\n",
+    "    prompt += \"- B-LOC: Beginning of an Location term\\n\"\n",
+    "    prompt += \"- I-LOC: Inside of an Location term\\n\"\n",
+    "    prompt += \"- B-PLC: Beginning of an Place term\\n\"\n",
+    "    prompt += \"- I-PLC: Inside of an Place term\\n\"\n",
     "    prompt += \"- O: Not related to Aspect or Opinion\\n\\n\"\n",
     "    prompt += \"Aspect refers to the attribute or feature of an entity, and Opinion indicates a subjective evaluation of that aspect.\\n\"\n",
     "    prompt += \"The following entities are present in this sentence:\\n\"\n",
@@ -420,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,13 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../03_generated_sentences.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"03_generated_sentences.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    generated_sentences = json.load(f)"
    ]
   },
@@ -474,9 +494,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [13:33<00:00,  8.14s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "import time\n",
@@ -505,9 +533,7 @@
     "            \"tokens\": tokens,\n",
     "            \"bio_tagging\": bio_result\n",
     "        })\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "\n"
+    "    time.sleep(1)"
    ]
   },
   {
@@ -519,13 +545,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../04_bio_tagged_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"04_bio_tagged_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(bio_data, f, indent=4, ensure_ascii=False)"
    ]
   },
@@ -547,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +587,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../04_bio_tagged_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"04_bio_tagged_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    bio_data = json.load(f)\n",
     "\n",
     "print(len(bio_data))"
@@ -576,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -653,14 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../05_processed_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"05_processed_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(processed_list, f, indent=4, ensure_ascii=False)\n",
     "\n",
-    "with open(\"../06_check_list.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"06_check_list.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(check_list, f, indent=4, ensure_ascii=False)"
    ]
   },
@@ -673,9 +699,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 400, Test: 100\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
