docs: README 수정

--- a/data/NER/generate/make_dataset.ipynb
+++ b/data/NER/generate/make_dataset.ipynb
@@ -35,15 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
     "import os\n",
+    "import ollama\n",
     "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "client = openai.OpenAI()"
+    "client = ollama.Client(\n",
+    "    host='http://localhost:11434'\n",
+    ")"
    ]
   },
   {
